fix spacing on icons

--- a/layouts/page/about-us.html
+++ b/layouts/page/about-us.html
@@ -16,7 +16,7 @@
         <h2 class="text-4xl font-teko">Our Story</h2>
         <p class="font-open text-lg font-light pb-3">Texas has a long history, and with it, a long chain of title on most of the property in the state. With a rich pioneer tradition and enterprising spirit, real estate transactions in the state of Texas have a considerable need for research and coverage on property purchases. This market has an unprecedented demand for strong, solvent title insurance companies.</p>
         <div class="text-color-1B5785 select-none read-more">
-            <i class="fas fa-caret-right read-more-carot"></i> Read More
+            <i class="pr-1 fas fa-caret-right read-more-carot"></i> Read More
         </div>
         <span class="font-open text-0 font-light read-more-content">
         <p class="py-3">Frontier Title was established when real estate law experts Doug Watson and Casey Lambright came together in 2006 to fill a big gap in the industry. With the core belief that service is the key to continued growth, Frontier Title quickly gained foothold as the premier title insurance company in Katy, Texas and the west Houston area.</p>
