--- a/layouts/page/underwriting.html
+++ b/layouts/page/underwriting.html
@@ -16,7 +16,7 @@
         <h2 class="text-4xl font-teko">Residential</h2>
         <p class="font-open text-lg font-light pb-3">Buying or selling a home is, for most people, the largest financial endeavor they will ever undertake. You need to hand the professional services to a title company that efficiently and accurately handles this type of complex transaction.</p>
         <div class="text-color-1B5785 select-none read-more">
-            <i class="fas fa-caret-right read-more-carot"></i> Read More
+            <i class="pr-1 fas fa-caret-right read-more-carot"></i> Read More
         </div>
         <span class="font-open text-0 font-light read-more-content">
         <p class="py-3">Frontier Title offers customers the most complete real estate services in the Katy and Houston areas. For title and escrow/closing services, you can count on Frontier Title for all your real estate needs. Frontier Title has always served its customers with accuracy and efficiency.</p>
@@ -33,7 +33,7 @@
         <h2 class="text-4xl font-teko">Commercial</h2>
         <p class="font-open text-lg font-light pb-3">At Frontier Title, we understand that a commercial real estate closing is a complex and often intense matter. Our technology and adaptable, consistent approach to commercial title insurance transactions lets us deliver disciplined and original solutions in response to fluctuating markets.</p>
         <div class="text-color-1B5785 select-none read-more">
-            <i class="fas fa-caret-right read-more-carot"></i> Read More
+            <i class="pr-1 fas fa-caret-right read-more-carot"></i> Read More
         </div>
         <span class="font-open text-0 font-light read-more-content">
         <p class="py-3">Frontier Title works hard to continually train our staff, providing them with the technology required to give the highest level of personal service. More importantly, we know nothing supercedes personal contact with our customers. We honestly value our customer relationships, and work to maintain them through consistent, responsive, and well-informed service. Our highly trained and experienced staff provides title insurance, escrow and settlement services specifically designed to support the individual demands of any commercial purchase.</p>
