--- a/themes/site-theme/layouts/partials/header.html
+++ b/themes/site-theme/layouts/partials/header.html
@@ -20,20 +20,20 @@ transition: .2s;
     </a>
     {{ partial "siteNavi.html" . }}
     <div class="hidden lg:block w-1/6 text-color-1B5785 text-3xl">
-      <a href="">
-        <i class="hover:text-color-042947 fab fa-facebook-square"></i>
+      <a class="w-auto" href="">
+        <i class="text-2xl hover:text-color-042947 pl-1 fab fa-facebook-square"></i>
       </a>
       <a href="">
-        <i class="hover:text-color-042947 fab fa-instagram"></i>
+        <i class="text-2xl hover:text-color-042947 pl-1 fab fa-instagram"></i>
       </a>
       <a href="">
-        <i class="hover:text-color-042947 fab fa-linkedin"></i>
+        <i class="text-2xl hover:text-color-042947 pl-1 fab fa-linkedin"></i>
       </a>
       <a href="">
-        <i class="hover:text-color-042947 fab fa-twitter-square"></i>
+        <i class="text-2xl hover:text-color-042947 pl-1 fab fa-twitter-square"></i>
       </a>
       <a href="">
-        <i class="hover:text-color-042947 fas fa-phone-square"></i>
+        <i class="text-2xl hover:text-color-042947 pl-1 fas fa-phone-square"></i>
       </a>
     </div>
   </div>
