rework homepage and add in content for title 101

--- a/layouts/page/home.html
+++ b/layouts/page/home.html
@@ -4,13 +4,54 @@
 .home-hero {
     background-image: url("https://res.cloudinary.com/onpointcustomhomes/image/upload/b_black,o_50/v1566605000/Empower%20Title/home-hero.jpg");
 }
+.about-us-hero {
+    background-image: url("https://res.cloudinary.com/onpointcustomhomes/image/upload/v1569855346/Empower%20Title/about-empower.jpg");
+}
 a {
 transition: .2s;
 }
 </style>
-<div class="bg-fixed bg-bottom bg-cover bg-no-repeat z-50 text-center py-56 px-6 lg:px-12 home-hero">
-    <h6 class="font-teko text-2xl md:text-4xl font-light text-white leading-none pb-3">Lorem ispum rhout test.</h6>
-    <h1 class="font-open text-3xl md:text-6xl font-light text-white pb-10 leading-none">Lorem ipsum <span class="font-bold">Begin</span> to <span class="font-bold">End</span></h1>
-    <a href="/about-us/" class="bg-color-1B5785 border-4 border-color-042947 hover:bg-color-042947 font-teko text-xl text-white pt-2 pb-1 px-4 hover:cursor-pointer">About Empower Title</a>
+
+<div class="bg-color-1B5785 py-1"></div>
+
+<div class="bg-fixed bg-bottom bg-cover bg-no-repeat z-50 text-center pt-32 pb-40 px-6 lg:px-12 home-hero">
+    <h6 class="font-teko text-2xl md:text-4xl font-light text-white leading-none pb-3">Welcome to</h6>
+    <h1 class="font-open text-3xl md:text-6xl font-light text-white pb-10 leading-none">Empower Title</h1>
 </div>
+
+<div class="bg-color-1B5785 py-1"></div>
+
+<div class="flex flex-wrap items-start bg-white lg:pl-16 lg:mx-24 -mt-24 shadow-lg">
+    <div class="w-5/6 lg:w-2/3 mx-auto pt-10 lg:pr-12">
+        <h2 class="text-4xl font-teko">Our Story</h2>
+        <p class="font-open text-lg font-light pb-3">Texas has a long history, and with it, a long chain of title on most of the property in the state. With a rich pioneer tradition and enterprising spirit, real estate transactions in the state of Texas have a considerable need for research and coverage on property purchases. This market has an unprecedented demand for strong, solvent title insurance companies.</p>
+        <div class="text-color-1B5785 select-none read-more">
+            <i class="pr-1 fas fa-caret-right read-more-carot"></i> Read More
+        </div>
+        <span class="font-open text-0 font-light read-more-content">
+        <p class="py-3">Frontier Title was established when real estate law experts Doug Watson and Casey Lambright came together in 2006 to fill a big gap in the industry. With the core belief that service is the key to continued growth, Frontier Title quickly gained foothold as the premier title insurance company in Katy, Texas and the west Houston area.</p>
+        <p class="pb-3">Previously in-house legal counsel for a mortgage bank operating in twenty-six states, Doug Watson lent industry expertise to operating a sound practice. Casey Lambright brought his years as a real estate attorney representing builders, developers and lending institutions, and Frontier Title expanded rapidly.</p>
+        <p class="pb-10">With our unique, customer-oriented philosophies, Frontier Title has solid plans for expanding to serve the entire Texas market.</p>
+        </span>
+    </div>
+    <div class="w-5/6 lg:w-1/3 lg:px-8 mx-auto bg-cover bg-center bg-no-repeat about-us-hero">
+        <div class="py-40"></div>
+    </div>
+</div>
+
+<div class="flex flex-wrap items-center py-12 lg:px-32">
+    <div class="w-full mb-12">
+        <h2 class="font-open text-5xl lg:text-6xl text-color-1B5785 font-thin text-center">Services</h2>
+    </div>
+    <a href="/title-101/" class="w-full lg:w-1/2 bg-gray-200 hover:bg-color-1B5785 text-color-1B5785 hover:text-white pt-8 pb-6 text-center border-8 border-white">
+        <h3 class="font-teko text-4xl font-thin">Title 101</h3>
+    </a>
+    <a href="/underwriting/" class="w-full lg:w-1/2 bg-gray-200 hover:bg-color-1B5785 text-color-1B5785 hover:text-white pt-8 pb-6 text-center border-8 border-white">
+        <h3 class="font-teko text-4xl font-thin">Underwriting</h3>
+    </a>
+    <a href="/title-calculator/#new-purchase-calculator" class="w-full bg-gray-200 hover:bg-color-1B5785 text-color-1B5785 hover:text-white pt-8 pb-6 text-center border-8 border-white">
+        <h3 class="font-teko text-4xl font-thin">Title Calculators</h3>
+    </a>
+</div>
+
 {{ end }}
