--- a/layouts/page/title-101.html
+++ b/layouts/page/title-101.html
@@ -15,41 +15,115 @@
 }
 </style>
 
-<div class="bg-color-1B5785 py-1"></div>
+<h1 class="bg-color-1B5785 font-open text-4xl lg:text-5xl font-thin text-white text-center pt-6 pb-5 leading-none">The ABCs of Title</h1>
 
-<div class="flex flex-wrap items-start py-12 lg:px-24">
+<div class="flex flex-wrap items-start flex-col-reverse lg:flex-row py-12 lg:px-24">
     <div class="w-5/6 lg:w-1/2 mx-auto pt-6 lg:pr-12">
-        <h2 class="text-4xl font-teko">What is Lorem Ipsum?</h2>
-        <p class="font-open text-lg font-light pb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <div class="text-color-1B5785 select-none read-more">
-            <i class="pr-1 fas fa-caret-right read-more-carot"></i> Read More
-        </div>
-        <span class="font-open text-0 font-light read-more-content">
-        <p class="py-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <p class="pb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <p class="pb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        </span>
+        <h2 class="text-4xl font-teko py-3 leading-none">What's in a Title Commitment?</h2>
+        <p class="font-open text-lg font-light pb-3">The title commitment for title insurance informs those to be insured by a title policy of the condition of the property involved. In addition, it informs the future insurers of any requirements that must be met before a policy will be issued. In most insurances, the seller required by the contract to furnish the commitment to the purchaser. If a loan is part of the transaction, the lender will require a commitment at some time during the process of the loan.</p>
     </div>
     <div class="w-5/6 lg:w-1/2 lg:px-8 mx-auto bg-contain bg-center bg-no-repeat title-hero-1">
         <div class="py-40"></div>
     </div>
 </div>
 
-<div class="flex flex-wrap lg:flex-row-reverse items-start py-12 lg:px-24">
-    <div class="w-5/6 lg:w-1/2 mx-auto pt-6 lg:pr-12">
-        <h2 class="text-4xl font-teko">What is Lorem Ipsum?</h2>
-        <p class="font-open text-lg font-light pb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <div class="text-color-1B5785 select-none read-more2">
-            <i class="pr-1 fas fa-caret-right read-more-carot2"></i> Read More
-        </div>
-        <span class="font-open text-0 font-light read-more-content2">
-        <p class="py-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <p class="pb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <p class="pb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        </span>
+<div class="flex flex-wrap">
+    <div class="w-full bg-color-1B5785 py-5 mb-12">
+        <h2 class="font-open text-2xl sm:text-4xl lg:text-5xl text-white font-thin px-12 text-center leading-none">There are four schedules to the title commitment</h2>
     </div>
-    <div class="w-5/6 lg:w-1/2 lg:px-8 mx-auto bg-contain bg-center bg-no-repeat title-hero-2">
-        <div class="py-40"></div>
+    <div class="w-11/12 lg:w-1/2 mx-auto lg:px-12">
+        <div class="w-full bg-gray-200 mx-auto mb-8 p-8 shadow-lg">
+            <h4 class="font-teko text-4xl">Schedule A</h4>
+            <h6 class="font-open text-base -mt-2 pb-3">Actual Facts</h6>
+            <ul class="bg-gray-300 font-open text-lg font-thin list-disc p-8">
+                <li class="pb-5 leading-none">Sets the effective date of commitment</li>
+                <li class="pb-5 leading-none">Names the insured, sales price, loan amount, estate, or interest in the land</li>
+                <li class="pb-5 leading-none">States the names of the person(s) in the title</li>
+                <li class="pb-5 leading-none">Legal description</li>
+            </ul>
+        </div>
+    </div>
+    <div class="w-11/12 lg:w-1/2 mx-auto lg:px-12">
+        <div class="w-full bg-gray-200 mx-auto mb-8 p-8 shadow-lg">
+            <h4 class="font-teko text-4xl">Schedule B</h4>
+            <h6 class="font-open text-base -mt-2 pb-3">Buyer Be Aware</h6>
+            <ul class="bg-gray-300 font-open text-lg font-thin list-disc p-8">
+                <li class="pb-5 leading-none">Informs the insured of all recorded property restrictions, liens, mineral reservations, easements, and all other appurtenances</li>
+                <li class="pb-5 leading-none">Guarantees that ad valorem taxes are paid and current</li>
+                <li class="pb-5 leading-none">Limits liability of issued policy</li>
+            </ul>
+        </div>
+    </div>
+    <div class="w-11/12 lg:w-1/2 mx-auto lg:px-12">
+        <div class="w-full bg-gray-200 mx-auto mb-8 p-8 shadow-lg">
+            <h4 class="font-teko text-4xl">Schedule C</h4>
+            <h6 class="font-open text-base -mt-2 pb-3">Clear To Close</h6>
+            <ul class="bg-gray-300 font-open text-lg font-thin list-disc p-8">
+                <li class="pb-5 leading-none">Informs the insured of requirements before policy issue</li>
+            </ul>
+        </div>
+    </div>
+    <div class="w-11/12 lg:w-1/2 mx-auto lg:px-12">
+        <div class="w-full bg-gray-200 mx-auto mb-8 p-8 shadow-lg">
+            <h4 class="font-teko text-4xl">Schedule D</h4>
+            <h6 class="font-open text-base -mt-2 pb-3">Disclose</h6>
+            <ul class="bg-gray-300 font-open text-lg font-thin list-disc p-8">
+                <li class="pb-5 leading-none">Discloses all officers of the title company (according to state rules and regulations)</li>
+                <li class="pb-5 leading-none">Discloses policy(ies) of premiums</li>
+                <li class="pb-5 leading-none">Discloses beneficiary(ies) of premiums</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="flex flex-wrap">
+    <div class="w-full bg-color-1B5785 py-5 mb-12">
+        <h2 class="font-open text-4xl lg:text-5xl text-white font-thin px-12 text-center leading-none pb-3">Who Pays What?</h2>
+        <h3 class="font-teko text-3xl text-white font-thin px-12 text-center leading-none">A Guide to Closing Costs</h3>
+    </div>
+    <div class="w-11/12 lg:w-1/2 mx-auto lg:px-12">
+        <div class="w-full bg-gray-200 mx-auto mb-8 p-8 shadow-lg">
+            <h4 class="font-teko text-4xl">Seller</h4>
+            <h6 class="font-open text-base -mt-2 pb-3">Items for which the seller can generally be expected to pay</h6>
+            <ul class="bg-gray-300 font-open text-lg font-thin list-disc p-8">
+                <li class="pb-5 leading-none">Real estate commission</li>
+                <li class="pb-5 leading-none">Tax certificate</li>
+                <li class="pb-5 leading-none">Escrow fee</li>
+                <li class="pb-5 leading-none">Document preparation for deed</li>
+                <li class="pb-5 leading-none">Loan fees required by buyer’s deed</li>
+                <li class="pb-5 leading-none">Payoff of All loans in Seller’s name</li>
+                <li class="pb-5 leading-none">Interest accrued to lender being paid off, statement fees, and any prepayment penalties</li>
+                <li class="pb-5 leading-none">Owner title insurance</li>
+                <li class="pb-5 leading-none">Termite inspection (according to contract)</li>
+                <li class="pb-5 leading-none">Termite work (according to contract)</li>
+                <li class="pb-5 leading-none">Judgements, tax liens, etc. (against the seller)</li>
+                <li class="pb-5 leading-none">Tax pro-rations (for time owned during tax year)</li>
+                <li class="pb-5 leading-none">Homeowner’s dues</li>
+                <li class="pb-5 leading-none">Notary fees</li>
+                <li class="pb-5 leading-none">Home warranty</li>
+                <h6 class="pb-5 leading-none">(Additional fees agreed to per contract)</h6>
+            </ul>
+        </div>
+    </div>
+    <div class="w-11/12 lg:w-1/2 mx-auto lg:px-12">
+        <div class="w-full bg-gray-200 mx-auto mb-8 p-8 shadow-lg">
+            <h4 class="font-teko text-4xl">Buyer</h4>
+            <h6 class="font-open text-base -mt-2 pb-3">Items for which the buyer can generally be expected to pay</h6>
+            <ul class="bg-gray-300 font-open text-lg font-thin list-disc p-8">
+                <li class="pb-5 leading-none">Lender’s title insurance premium</li>
+                <li class="pb-5 leading-none">Escrow fee</li>
+                <li class="pb-5 leading-none">Document preparation (if applicable)</li>
+                <li class="pb-5 leading-none">Notary Fees</li>
+                <li class="pb-5 leading-none">Recorded charges to all documents in the buyer’s name</li>
+                <li class="pb-5 leading-none">Termite inspection (according to contract)</li>
+                <li class="pb-5 leading-none">Homeowner’s association dues (for prorated portion of the year)</li>
+                <li class="pb-5 leading-none">Homeowners transfer fee</li>
+                <li class="pb-5 leading-none">All new loan charges (except those required by lender for seller to pay)</li>
+                <li class="pb-5 leading-none">Interest on new loan</li>
+                <li class="pb-5 leading-none">Inspection fees (roofing, property inspection, geological)</li>
+                <li class="pb-5 leading-none">Homeowner’s insurance premium for first year</li>
+            </ul>
+        </div>
     </div>
 </div>
 
