--- a/layouts/page/title-calculators.html
+++ b/layouts/page/title-calculators.html
@@ -22,21 +22,23 @@ input {
 <h1 class="bg-color-1B5785 font-open text-4xl lg:text-5xl font-thin text-white text-center pt-6 pb-5 leading-none">Title Calculators</h1>
 
 <div class="flex flex-wrap">
-  <a href="#new-purchase-calculator" id="new-purchase-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
+  <a href="#calc-go-to" id="new-purchase-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
     <p class="font-teko text-2xl text-center">New Purchase Calculator</p>
   </a>
-  <div id="refinance-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
+  <a href="#calc-go-to" id="refinance-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
     <p class="font-teko text-2xl text-center">Refinance Calculator</p>
-  </div>
-  <div id="seller-net-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
+  </a>
+  <a href="#calc-go-to" id="seller-net-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
     <p class="font-teko text-2xl text-center">Seller Net Sheet</p>
-  </div>
-  <div id="buyer-net-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
+  </a>
+  <a href="#calc-go-to" id="buyer-net-open" class="w-full sm:w-1/4 bg-gray-200 py-5 px-2 border-4 border-white leading-none hover:bg-gray-300 hover:cursor-pointer">
     <p class="font-teko text-2xl text-center">Buyer Cost Sheet</p>
-  </div>
+  </a>
 </div>
 
 <div class="pt-12"></div>
+
+<a name="calc-go-to"></a>
 
 <form id="new-purchase-calculator" class="overflow-hidden flex flex-wrap calculator" method="post" action="">
   <h3 class="w-auto font-open text-3xl font-thin text-center mx-auto">New Purchase Calculator</h3>
@@ -799,6 +801,7 @@ input {
 								<!--
 <script src='https://frontiertitletexas.com/calculators/data.php' ></script>
 -->
+
 <form name="buyer_cost_sheet" class="h-0 opacity-0 overflow-hidden calculator" id="buyer_cost_sheet" method="post" action="">
   <h3 class="w-full font-open text-3xl font-thin text-center mx-auto">Buyer Cost Sheet</h3>
         <fieldset id="buyer_info" class="w-11/12 lg:w-2/3 xl:w-1/3 border my-12 mx-auto p-3">
