--- a/layouts/page/contact-us.html
+++ b/layouts/page/contact-us.html
@@ -9,12 +9,10 @@
 }
 </style>
 
-<div class="bg-color-1B5785 py-1"></div>
-
 <h1 class="bg-color-1B5785 font-open text-4xl lg:text-5xl font-thin text-white text-center pt-6 pb-5 leading-none">Contact Empower Title</h1>
 
 <div class="flex flex-wrap items-start bg-gray-100 pb-2">
-    <div class="flex flex-wrap items-center w-1/3 text-center p-8">
+    <div class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
         <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-map-marker-alt"></i>
         <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Address</span>
         <div class="w-full">
@@ -22,14 +20,14 @@
         <h6 class="font-open text-base font-thin">The Woodlands, TX  77380</h6>
         </div>
     </div>
-    <div class="flex flex-wrap items-center w-1/3 text-center p-8">
+    <div class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
         <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-phone-square"></i>
         <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Phone</span>
         <div class="w-full">
         <h6 class="font-open text-base font-thin">912-432-0772</h6>
         </div>
     </div>
-    <div class="flex flex-wrap items-center w-1/3 text-center p-8">
+    <div class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
         <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-envelope-square"></i>
         <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Email</span>
         <div class="w-full">
