--- a/themes/site-theme/layouts/partials/footer.html
+++ b/themes/site-theme/layouts/partials/footer.html
@@ -2,8 +2,16 @@
   
 </style>
 
-<footer class="absolute w-full flex flex-wrap bg-color-1B5785 py-3">
-  <h6 class="w-full font-open text-sm text-white text-center"><span class="font-thin">&copy; 2019 - {{ dateFormat "Jan 2, 2006" now }}</span><span class="font-bold"> Empower Title </span></h6>
+<footer class="absolute w-full flex flex-wrap">
+  {{ if not (eq .Title "Contact Us") }}
+  <div class="w-full bg-color-1B5785 py-5 text-center">
+    <div class="flex flex-wrap w-full lg:w-auto">
+        <a href="/contact-us/" class="bg-color-1B5785 border-4 border-color-042947 hover:bg-color-042947 font-teko text-2xl text-white mt-3 mx-auto pt-2 pb-1 px-4 hover:cursor-pointer">Ask about Our Services</a>
+    </div>
+  </div>
+  {{ else }}
+  {{ end }}
+  <h6 class="w-full bg-color-042947 font-open text-sm text-white text-center py-3"><span class="font-thin">&copy; 2019 - {{ dateFormat "Jan 2, 2006" now }}</span><span class="font-bold"> Empower Title </span></h6>
 </footer>
 
 {{ if eq .Site.Params.extraTools.elevatorJS true }}
