add phone numbers and fax numbers, remove extra about us text from homepage

--- a/layouts/page/contact-us.html
+++ b/layouts/page/contact-us.html
@@ -12,26 +12,33 @@
 <h1 class="bg-color-1B5785 font-open text-4xl lg:text-5xl font-thin text-white text-center pt-6 pb-5 leading-none">Contact Empower Title</h1>
 
 <div class="flex flex-wrap items-start bg-gray-100 pb-2">
+    <a href="tel:13463860800" class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
+        <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-phone-square"></i>
+        <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Phone</span>
+        <div class="w-full">
+        <h6 class="font-open text-base font-thin">+1 346.386.0800</h6>
+        </div>
+    </a>
     <div class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
+        <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-fax"></i>
+        <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Fax</span>
+        <div class="w-full">
+        <h6 class="font-open text-base font-thin">346.386.0801</h6>
+        </div>
+    </div>
+    <a href="mailto:nhollis@empowertitleco.com" class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
+        <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-envelope-square"></i>
+        <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Email</span>
+        <div class="w-full">
+        <h6 class="font-open text-base font-thin">nhollis@empowertitleco.com</h6>
+        </div>
+    </a>
+    <div class="flex flex-wrap items-center w-full bg-gray-200 text-center p-8 shadow-md">
         <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-map-marker-alt"></i>
         <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Address</span>
         <div class="w-full">
         <h6 class="font-open text-base font-thin">1450 Lake Robbins Drive, Ste 300</h6>
         <h6 class="font-open text-base font-thin">The Woodlands, TX  77380</h6>
-        </div>
-    </div>
-    <div class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
-        <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-phone-square"></i>
-        <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Phone</span>
-        <div class="w-full">
-        <h6 class="font-open text-base font-thin">912-432-0772</h6>
-        </div>
-    </div>
-    <div class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
-        <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-envelope-square"></i>
-        <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Email</span>
-        <div class="w-full">
-        <h6 class="font-open text-base font-thin">test@test.com</h6>
         </div>
     </div>
     
