--- a/themes/site-theme/layouts/partials/header.html
+++ b/themes/site-theme/layouts/partials/header.html
@@ -20,7 +20,7 @@ transition: .2s;
     </a>
     {{ partial "siteNavi.html" . }}
     <div class="hidden lg:block w-1/6 text-color-1B5785 text-3xl">
-      <a class="flex items-center hover:text-color-042947 ml-auto" href="">
+      <a class="flex items-center hover:text-color-042947 ml-auto" href="tel:13463860800">
         <span class="font-open font-thin text-lg">Call Us</span>
         <i class="text-xl pl-1 fas fa-phone-square"></i>
       </a>
