--- a/layouts/page/home.html
+++ b/layouts/page/home.html
@@ -25,14 +25,14 @@ transition: .2s;
     <div class="w-5/6 lg:w-2/3 mx-auto pt-10 lg:pr-12">
         <h2 class="text-4xl font-teko">Our Story</h2>
         <p class="font-open text-lg font-light pb-3">Texas has a long history, and with it, a long chain of title on most of the property in the state. With a rich pioneer tradition and enterprising spirit, real estate transactions in the state of Texas have a considerable need for research and coverage on property purchases. This market has an unprecedented demand for strong, solvent title insurance companies.</p>
-        <div class="text-color-1B5785 select-none read-more">
+        <!-- <div class="text-color-1B5785 select-none read-more">
             <i class="pr-1 fas fa-caret-right read-more-carot"></i> Read More
         </div>
         <span class="font-open text-0 font-light read-more-content">
         <p class="py-3">Frontier Title was established when real estate law experts Doug Watson and Casey Lambright came together in 2006 to fill a big gap in the industry. With the core belief that service is the key to continued growth, Frontier Title quickly gained foothold as the premier title insurance company in Katy, Texas and the west Houston area.</p>
         <p class="pb-3">Previously in-house legal counsel for a mortgage bank operating in twenty-six states, Doug Watson lent industry expertise to operating a sound practice. Casey Lambright brought his years as a real estate attorney representing builders, developers and lending institutions, and Frontier Title expanded rapidly.</p>
         <p class="pb-10">With our unique, customer-oriented philosophies, Frontier Title has solid plans for expanding to serve the entire Texas market.</p>
-        </span>
+        </span> -->
     </div>
     <div class="w-5/6 lg:w-1/3 lg:px-8 mx-auto bg-cover bg-center bg-no-repeat about-us-hero">
         <div class="py-40"></div>
