--- a/layouts/page/contact-us.html
+++ b/layouts/page/contact-us.html
@@ -26,11 +26,11 @@
         <h6 class="font-open text-base font-thin">346.386.0801</h6>
         </div>
     </div>
-    <a href="mailto:nhollis@empowertitleco.com" class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
+    <a href="mailto:info@empowertitleco.com" class="flex flex-wrap items-center w-full lg:w-1/3 text-center p-8">
         <i class="text-3xl text-color-1B5785 z-10 ml-auto fas fa-envelope-square"></i>
         <span class="font-teko text-2xl mx-auto pt-1 pl-5 pr-3 -ml-3 z-0">Email</span>
         <div class="w-full">
-        <h6 class="font-open text-base font-thin">nhollis@empowertitleco.com</h6>
+        <h6 class="font-open text-base font-thin">info@empowertitleco.com</h6>
         </div>
     </a>
     <div class="flex flex-wrap items-center w-full bg-gray-200 text-center p-8 shadow-md">
